优化了向导人偶的搜索算法，减少多人游戏中可能出现的卡顿现象